--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^2.15.4",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0"
   },
