--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
@@ -32,7 +33,6 @@
     "react-dom": "19.2.3",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
-    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
