--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "paygos-v2",
   "version": "0.1.0",
   "private": true,
+  "browserslist": [
+    "Chrome >= 93",
+    "Firefox >= 92",
+    "Safari >= 15.4",
+    "Edge >= 93",
+    "not dead"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "optimize-images": "node scripts/optimize-images.mjs"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -37,6 +45,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "critters": "^0.0.25",
+    "sharp": "^0.33.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
